@@ -35,7 +35,6 @@ SEXP R_MKGBLMAT(SEXP SUBX, SEXP DESCX, SEXP RDEST, SEXP CDEST)
 
 SEXP R_DALLREDUCE(SEXP X, SEXP LDIM, SEXP DESCX, SEXP OP, SEXP SCOPE)
 {
-  const int ictxt = INTEGER(DESCX)[1];
   const int m = INTEGER(DESCX)[2], n = INTEGER(DESCX)[3];
   
   SEXP CPX;
